# ai

./: .gitignore  README.md  predict.py  requirements.txt  setup.py
.github/: dependabot.yaml
.github/workflows/: python.yaml  release.yaml  rust.yaml
burn-algorithms/: COCOS.md  Cargo.toml  README.md
burn-algorithms/addition/: Cargo.toml
burn-algorithms/addition-inference/: Cargo.toml
burn-algorithms/addition-inference/src/: main.rs
burn-algorithms/addition-wasm-inference/: Cargo.toml
burn-algorithms/addition-wasm-inference/src/: main.rs
burn-algorithms/addition/src/: main.rs
burn-algorithms/agnews/: Cargo.toml
burn-algorithms/agnews/src/: data.rs  lib.rs  main.rs  model.rs  training.rs
burn-algorithms/cifar10/: Cargo.toml
burn-algorithms/cifar10/src/: data.rs  dataset.rs  lib.rs  main.rs  model.rs  training.rs
burn-algorithms/convert-image/: Cargo.toml
burn-algorithms/convert-image/src/: main.rs
burn-algorithms/imdb/: Cargo.toml
burn-algorithms/imdb/src/: data.rs  main.rs  model.rs  training.rs
burn-algorithms/iris/: Cargo.toml
burn-algorithms/iris-inference/: Cargo.toml
burn-algorithms/iris-inference/src/: infer.rs  lib.rs  main.rs  model.rs
burn-algorithms/iris-wasm-inference/: Cargo.toml
burn-algorithms/iris-wasm-inference/src/: infer.rs  main.rs  model.rs
burn-algorithms/iris/src/: data.rs  lib.rs  main.rs  model.rs  training.rs
burn-algorithms/lib/: Cargo.toml
burn-algorithms/lib/src/: lib.rs
burn-algorithms/mnist/: Cargo.toml
burn-algorithms/mnist-inference/: Cargo.toml
burn-algorithms/mnist-inference/src/: infer.rs  main.rs  model.rs
burn-algorithms/mnist-wasm-inference/: Cargo.toml
burn-algorithms/mnist-wasm-inference/src/: infer.rs  main.rs
burn-algorithms/mnist/src/: data.rs  main.rs  training.rs
burn-algorithms/regression/: Cargo.toml
burn-algorithms/regression/src/: main.rs  training.rs
burn-algorithms/winequality/: Cargo.toml
burn-algorithms/winequality-inference/: Cargo.toml
burn-algorithms/winequality-inference/src/: infer.rs  main.rs  model.rs
burn-algorithms/winequality/src/: data.rs  main.rs  model.rs  training.rs
covid19/: .gitignore  Dockerfile  Dockerfile.infer  Dockerfile.train  README.md  covid19.py  predict.py  requirements.txt  train.py  zip.py
covid19/tools/: prepare_datasets.py
fraud-detection/: Dockerfile.infer  Dockerfile.train  README.md  fraud-detection.py  prediction.py  requirements.txt
rul-turbofan/: Dockerfile.inf  Dockerfile.infer  Dockerfile.train  README.md  RUL_training.py  dataset.py  pred-model.py  pred_model.py  requirements.txt  rul-training.py  scaler.pkl
