[workspace]
members = [
    "addition",
    "addition-inference",
    "convert-image",
    "mnist",
    "mnist-inference",
    "cifar10",
    "winequality",
    "iris",
    "iris-inference",
    "agnews",
    "imdb",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
description = "A collection of Machine Learning algorithms implemented in Rust"
