[package]
name = "addition-inference"
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true

[features]
cocos = []
read = []

[[bin]]
name = "addition-inference-cocos"
path = "src/main.rs"
required-features = ["cocos"]

[[bin]]
name = "addition-inference-read"
path = "src/main.rs"
required-features = ["read"]

[dependencies]
burn = { version = "0.13.2", default-features = false, features = ["ndarray"] }
futures = "0.3.30"
lib = { path = "../lib" }
