[package]
name = "addition-inference"
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true

[features]
cocos = []
read = []

[dependencies]
burn = { version = "0.14.0", default-features = false, features = ["ndarray"] }
futures = "0.3.30"
lib = { path = "../lib" }
