[package]
name = "addition"
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true
publish = false

[features]
ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]
cocos = []
input = []

[dependencies]
burn = { version = "0.13.2", features = ["ndarray", "wgpu"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
