[package]
name = "addition"
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true
publish = false

[features]
ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]
cocos = []
read = []


[[bin]]
name = "addition-ndarray"
path = "src/main.rs"
required-features = ["ndarray"]

[[bin]]
name = "addition-wgpu"
path = "src/main.rs"
required-features = ["wgpu"]

[[bin]]
name = "addition-cocos"
path = "src/main.rs"
required-features = ["cocos"]

[[bin]]
name = "addition-read"
path = "src/main.rs"
required-features = ["read"]

[dependencies]
burn = { version = "0.14.0", features = ["ndarray", "wgpu"] }
lib = { path = "../lib" }
