[package]
edition.workspace = true
license.workspace = true
version.workspace = true
name = "agnews"
publish = false

[features]
ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]
cocos = []

[[bin]]
name = "agnews-ndarray"
path = "src/main.rs"
required-features = ["ndarray"]

[[bin]]
name = "agnews-wgpu"
path = "src/main.rs"
required-features = ["wgpu"]

[[bin]]
name = "agnews-cocos"
path = "src/main.rs"
required-features = ["cocos"]


[dependencies]
burn = { version = "0.15.0", features = [
    "dataset",
    "fusion",
    "ndarray",
    "train",
    "wgpu",
] }
csv = "1.3.0"
derive-new = "0.7.0"
serde = { version = "1.0.203", features = ["derive", "std"] }
tokenizers = { version = "0.21.0", features = ["http", "onig"] }
lib = { path = "../lib" }
flate2 = "1.0.31"
tar = "0.4.41"
