[package]
edition.workspace = true
license.workspace = true
version.workspace = true
name = "cifar10"
publish = false

[features]
default = ["burn/default"]
ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]

[dependencies]
burn = { version = "0.13.2", features = [
    "dataset",
    "ndarray",
    "train",
    "vision",
    "wgpu",
] }
burn-common = "0.13.2"
flate2 = "1.0.30"
serde = { version = "1.0.203", features = ["derive", "std"] }
tar = "0.4.41"
