[package]
edition.workspace = true
license.workspace = true
version.workspace = true
name = "cifar10"
publish = false

[features]
ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]
cocos = []

[[bin]]
name = "cifar10-ndarray"
path = "src/main.rs"
required-features = ["ndarray"]

[[bin]]
name = "cifar10-wgpu"
path = "src/main.rs"
required-features = ["wgpu"]

[[bin]]
name = "cifar10-cocos"
path = "src/main.rs"
required-features = ["cocos"]

[dependencies]
burn = { version = "0.14.0", features = [
    "dataset",
    "ndarray",
    "train",
    "vision",
    "wgpu",
] }
burn-common = "0.14.0"
serde = { version = "1.0.203", features = ["derive", "std"] }
lib = { path = "../lib" }
flate2 = "1.0.31"
tar = "0.4.41"
