[package]
name = "imdb"
version = "0.1.0"
edition = "2021"

[features]
ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]

[dependencies]
burn = { version = "0.13.2", features = [
    "dataset",
    "ndarray",
    "train",
    "wgpu",
] }
derive-new = "0.6.0"
serde = { version = "1.0.203", features = ["derive", "std"] }
tokenizers = { version = "0.19.1", features = ["http", "onig"] }
