[package]
edition.workspace = true
license.workspace = true
version.workspace = true
name = "imdb"
publish = false

[features]
ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]
cocos = []

[[bin]]
name = "imdb-ndarray"
path = "src/main.rs"
required-features = ["ndarray"]

[[bin]]
name = "imdb-wgpu"
path = "src/main.rs"
required-features = ["wgpu"]

[[bin]]
name = "imdb-cocos"
path = "src/main.rs"
required-features = ["cocos"]

[dependencies]
burn = { version = "0.13.2", features = [
    "dataset",
    "ndarray",
    "train",
    "wgpu",
] }
csv = "1.3.0"
derive-new = "0.6.0"
serde = { version = "1.0.203", features = ["derive", "std"] }
tokenizers = { version = "0.19.1", features = ["http", "onig"] }
lib = { path = "../lib" }
