[package]
edition.workspace = true
license.workspace = true
version.workspace = true
name = "imdb"
publish = false

[features]
ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]
cocos = []

[dependencies]
burn = { version = "0.13.2", features = [
    "dataset",
    "ndarray",
    "train",
    "wgpu",
] }
csv = "1.3.0"
derive-new = "0.6.0"
serde = { version = "1.0.203", features = ["derive", "std"] }
tokenizers = { version = "0.20.0", features = ["http", "onig"] }
lib = { path = "../lib" }
