[package]
edition.workspace = true
license.workspace = true
version.workspace = true
name = "iris"
publish = false

[features]
ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]
cocos = []

[[bin]]
name = "iris-ndarray"
path = "src/main.rs"
required-features = ["ndarray"]

[[bin]]
name = "iris-wgpu"
path = "src/main.rs"
required-features = ["wgpu"]

[[bin]]
name = "iris-cocos"
path = "src/main.rs"
required-features = ["cocos"]

[dependencies]
burn = { version = "0.18.0", features = [
    "dataset",
    "ndarray",
    "train",
    "wgpu",
] }
csv = "1.3.0"
serde = { version = "1.0.203", features = ["derive", "std"] }
lib = { path = "../lib" }
