[package]
name = "mnist-inference"
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
burn = { version = "0.13.2", default-features = false, features = ["ndarray"] }
futures = "0.3.30"
serde_json = "1.0.120"
