[package]
edition.workspace = true
license.workspace = true
version.workspace = true
name = "mnist"
publish = false

[features]
ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]
cocos = []

[dependencies]
burn = { version = "0.13.2", features = [
    "dataset",
    "ndarray",
    "train",
    "vision",
    "wgpu",
] }
burn-common = "0.13.2"
serde = { version = "1.0.203", features = ["derive", "std"] }
lib = { path = "../lib" }
