[package]
edition.workspace = true
license.workspace = true
version.workspace = true
name = "mnist"
publish = false

[features]
ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]
cocos = []

[[bin]]
name = "mnist-ndarray"
path = "src/main.rs"
required-features = ["ndarray"]

[[bin]]
name = "mnist-wgpu"
path = "src/main.rs"
required-features = ["wgpu"]

[[bin]]
name = "mnist-cocos"
path = "src/main.rs"
required-features = ["cocos"]

[dependencies]
burn = { version = "0.16.0", features = [
    "dataset",
    "ndarray",
    "train",
    "vision",
    "wgpu",
] }
burn-common = "0.16.0"
serde = { version = "1.0.203", features = ["derive", "std"] }
lib = { path = "../lib" }
