[package]
name = "regression"
version = "0.1.0"
edition = "2021"

[features]
default = ["burn/dataset", "burn/sqlite-bundled"]
ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]

[dependencies]
burn = { version = "0.13.2", features = [
    "dataset",
    "ndarray",
    "train",
    "wgpu",
] }
serde = { version = "1.0.203", features = ["derive", "std"] }
