[package]
name = "winequality-inference"
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true

[features]
cocos = []

[dependencies]
burn = { version = "0.16.0", default-features = false, features = ["ndarray"] }
futures = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
lib = { path = "../lib" }
