[package]
edition.workspace = true
license.workspace = true
version.workspace = true
name = "winequality"
publish = false

[features]
ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]

[dependencies]
burn = { version = "0.13.2", features = [
    "dataset",
    "ndarray",
    "train",
    "wgpu",
] }
serde = { version = "1.0.203", features = ["derive", "std"] }
