[package]
edition.workspace = true
license.workspace = true
version.workspace = true
name = "winequality"
publish = false

[features]
ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]
cocos = []

[[bin]]
name = "winequality-ndarray"
path = "src/main.rs"
required-features = ["ndarray"]

[[bin]]
name = "winequality-wgpu"
path = "src/main.rs"
required-features = ["wgpu"]

[[bin]]
name = "winequality-cocos"
path = "src/main.rs"
required-features = ["cocos"]

[dependencies]
burn = { version = "0.15.0", features = [
    "dataset",
    "ndarray",
    "train",
    "wgpu",
] }
csv = "1.3.0"
serde = { version = "1.0.203", features = ["derive", "std"] }
simple-zip = "1.0.1"
lib = { path = "../lib" }
dircpy = "0.3.19"
